[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/lobby/player_item.gd" type="Script" id=1]
[ext_resource path="res://assets/images/star.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/cerberus.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1656.0
margin_bottom = -1030.0
rect_min_size = Vector2( 200, 50 )
script = ExtResource( 1 )

[node name="ColorBg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerAvatorTexture" type="TextureRect" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[node name="PlayerNameLabel" type="Label" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 209.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "kirakuiin"
valign = 1

[node name="HostFlagTexture" type="TextureRect" parent="HBoxContainer"]
margin_left = 213.0
margin_right = 263.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true
